add_subdirectory(lib)
add_subdirectory(example)
add_subdirectory(kdm)
add_subdirectory(parsu)
add_subdirectory(asian)
add_subdirectory(cc)
add_subdirectory(selftest)
add_subdirectory(transform_file)
add_subdirectory(mapreduce)

option(ENABLE_APPLICATION_UFBMIG "Compile UfbMig Application" ON)
if (ENABLE_APPLICATION_UFBMIG)
   add_subdirectory(ufbmig)
endif()
